src/media/css/navbar.styl
// Styles for the mobile navbar.
@import 'lib';

[data-page-type~=settings] .header-button.settings,
.act-tray.active .settings {
    background-image: url(../img/pretty/gear.svg);
}

.navbar a {
    text-decoration: none;

    &:focus {
        outline: 0;
    }
}

@media $narrower-than-desktop {
    // New feed navigation (mobile only).
    header .act-tray {
        display: none;
    }
    body[data-page-type~=settings] {
        .back {
            display: none;
        }
        .site {
            display: block;
            width: 35px;
        }
    }
    body[data-page-type~=leaf],
    body[data-page-type~=search] {
        .site-nav {
            // Slide out of view.
            bottom: 50px;
            margin-bottom: -50px;
        }
    }
    .site-nav {
        background: $navbar-gray;
        bottom: 0;
        height: 50px;
        overflow: hidden;
        position: relative;
        transition(bottom .5s, margin-bottom .5s);

        // act-tray is link to Settings tabs (e.g., Settings, Purchases).
        // mkt-tray is link to Marketplace tabs (e.g., Home, New, Popular).
        .act-tray,
        .mkt-tray {
            background-color: $cloud-gray;
            border: 1px solid $cement-gray;
            height: 51px;
            transition(right .4s);
            width: 56px;
            z-index: 2;

            &.active {
                right: 0;
                transition(right .2s .6s);
            }
            .header-button {
                background-size: 30px auto;
                right: 0;
                top: 0;
                width: 50px;
            }
        }
        .act-tray {
            border-radius: 0 80px 80px 0;
            bottom: 2px;
            position: relative;
            right: 55px;

            &.active .header-button.settings {
                background-image: url(../img/pretty/gear.svg);
            }
            a.settings {
                height: 50px;
            }
        }
        .mkt-tray {
            border-radius: 80px 0 0 80px;
            bottom: 0;
            position: absolute;
            right: -60px;

            a.back-to-marketplace {
                background: url(../img/pretty/marketplace-icon.svg) 50% 50% no-repeat;
                background-size: 30px auto;
                display: block;
                height: 50px;
                position: absolute;
                width: 50px;
            }
        }
        .account-links {
            display: none;
        }
    }

    .navbar {
        disable-user-select();
        display: inline-block;
        height: auto;
        opacity: 1;
        padding: 8px 0;
        position: absolute;
        top: 0;
        transition(unquote('right .5s ease-out, left .3s ease-in'));
        white-space: nowrap;
        width: 100%;

        &.nav-mkt {
            visibility: hidden;
            right: -100%;

            &.active {
                right: -65px;
                visibility: visible;
            }
        }
        &.nav-settings {
            visibility: hidden;
            right: 100%;

            &.active {
                right: 0;
                visibility: visible;
            }
        }
        li {
            display: inline-block;
            font-size: 15px;
            position: relative;
            text-align: center;
            text-transform: uppercase;
            top: 2px;
            width: -moz-fit-content;
            width: -webkit-fit-content;

            a {
                color: $navbar-text;
                display: block;
                height: 38px;
                line-height: 32px;
                padding: 0 10px;

                &:hover {
                    border-bottom: 2px solid $bg-gray;
                    text-decoration: none;
                }
            }
            .desktop-cat-link {
                display: none;
            }
        }
    }
}

@media $at-least-desktop {
    .navbar.nav-settings,
    .act-tray,
    .mkt-tray {
        display: none;
    }
    .site-nav {
        background-color: #E0E0E0;
        height: 50px;
        margin: 0 auto;
        z-index: 25;
    }
    .navbar {
        disable-user-select();
        display: inline-block;
        height: auto;
        margin: 0 auto;
        left: 0;
        opacity: 1;
        position: absolute;
        right: 0 !important;  // navbar.js sets rule on `style`, so override.
        top: 0;
        width: -moz-fit-content;
        width: -webkit-fit-content;

        > li {
            display: inline-block;
            font-size: 15px;
            line-height: 50px;
            padding: 0 60px;
            position: relative;
            text-align: center;
            text-transform: uppercase;
            width: -moz-fit-content;
            width: -webkit-fit-content;

            &.active > a {
                color: $breezy-blue;
            }
            > a {
                color: $medium-gray;
                display: block;
                height: 50px;
                outline: 0;

                &.tab-link {
                    border-bottom: 0;
                }
                &:hover {
                    text-decoration: none;
                }
            }
            a:not([href]):hover {
                cursor: default;
            }
        }
        .categories {
            &:hover {
                color: $breezy-blue;

                > a {
                    color: $breezy-blue;

                    &:after {
                        border-top-color: $breezy-blue;
                    }
                }
            }
            > a {
                &:after {
                    border: 4px solid transparent;
                    border-top: 7px solid $dark-gray;
                    content: "";
                    margin-left: 8px;
                    position: absolute;
                    top: 20px;
                }
            }
        }
        .mobile-cat-link {
            display: none;
        }
        .desktop-cat-link {
            display: inline;
        }
    }
    [data-page-type~=settings] .header-button.settings {
        background-image: url(../img/pretty/settings_gear.svg);
    }
}

/* Add recommendation nav item if body.show-recommendations. */
@media $at-least-desktop {
    .show-recommendations .navbar > li {
        width: 20%;
        &:nth-child(2) {
            width: 17%;
        }
    }
}

@media $wider-desktop {
    .site-nav {
        top: 0px;
    }
}

// Navbar active states.
activeNavLi() {
    > a {
        color: $breezy-blue;
        border-bottom: 3px solid $breezy-blue;

        &:hover {
            border-bottom-color: $breezy-blue;
        }
    }
}
[data-page-type="root settings"] [data-tab="settings"] {
    activeNavLi();
}
for tab in homepage new popular recommended categories purchases feedback
    [data-page-type~={tab}] [data-tab={tab}] {
        activeNavLi();
    }

